# bay-street-mcp

./: .gitignore  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
src/bay_street_mcp/: __init__.py  ingest.py  server.py  store.py
tests/: test_store.py
